--- a/playbook1.yml
+++ b/playbook1.yml
@@ -1,11 +1,9 @@
 
 ---
-- name: Test Connection to my servers
+- name: Test connection to my servers
   hosts: all
   become: yes
 
-
   tasks:
-
   - name: Ping my servers
     ping:
